fixed object visibility

--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,8 @@ body {
 .object {
   width: 40px;
   height: 40px;
+  box-sizing: border-box; 
+  background-image: url('../assets/spritesheet.png');
   z-index: 2;
   position: relative;
 }
